Update Gradle wrapper and dependencies